wip/no-tls/sentences-http.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sentences-name
    mode: name
    app.kubernetes.io/part-of: sentences
    version: v1
  name: name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentences-name
      mode: name
      app.kubernetes.io/part-of: sentences
      version: v1
  template:
    metadata:
      labels:
        app: sentences-name
        mode: name
        app.kubernetes.io/part-of: sentences
        version: v1
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8000'
        prometheus.io/path: '/metrics'
    spec:
      containers:
      - image: praqma/istio-sentences:v1
        name: name
---
