wip/no-tls/sentences.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sentences
    mode: sentence
    app.kubernetes.io/part-of: sentences
  name: sentences
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentences
      mode: sentence
      app.kubernetes.io/part-of: sentences
  template:
    metadata:
      labels:
        app: sentences
        mode: sentence
        app.kubernetes.io/part-of: sentences
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8000'
        prometheus.io/path: '/metrics'
    spec:
      containers:
      - image: praqma/istio-sentences:v1
        name: sentences
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sentences
    mode: sentence
    app.kubernetes.io/part-of: sentences
  name: sentences
spec:
  ports:
  - name: api
    port: 5000
    protocol: TCP
    targetPort: 5000
    appProtocol: http
  selector:
    app: sentences
    mode: sentence
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sentences-age
    mode: age
    app.kubernetes.io/part-of: sentences
  name: age
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentences-age
      mode: age
      app.kubernetes.io/part-of: sentences
  template:
    metadata:
      labels:
        app: sentences-age
        mode: age
        app.kubernetes.io/part-of: sentences
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8000'
        prometheus.io/path: '/metrics'
    spec:
      containers:
      - image: praqma/istio-sentences:v1
        name: age
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sentences-age
    mode: age
    app.kubernetes.io/part-of: sentences
  name: age
spec:
  ports:
  - name: api
    port: 5000
    protocol: TCP
    targetPort: 5000
    appProtocol: http
  selector:
    app: sentences-age
    mode: age
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sentences-name
    mode: name
    app.kubernetes.io/part-of: sentences
    version: v1
  name: name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentences-name
      mode: name
      app.kubernetes.io/part-of: sentences
      version: v1
  template:
    metadata:
      labels:
        app: sentences-name
        mode: name
        app.kubernetes.io/part-of: sentences
        version: v1
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8000'
        prometheus.io/path: '/metrics'
    spec:
      containers:
      - image: praqma/istio-sentences:v1
        name: name
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sentences-name
    mode: name
  name: name
spec:
  ports:
  - name: api
    port: 5000
    protocol: TCP
    targetPort: 5000
    appProtocol: http
  selector:
    app: sentences-name
    mode: name
  type: ClusterIP
---
